--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@polymer/paper-icon-button": "^3.0.0-pre.15",
     "@polymer/paper-input": "^3.0.1",
     "@polymer/polymer": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "fontawesome-icon": "^1.0.4"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
