--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "fontawesome-icon": "^1.0.4"
   },
   "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "polymer-cli": "^1.7.1",
     "wct-browser-legacy": "^1.0.0"
   },
